chore: release 1.0.0 (#19)
Signed-off-by: HeZean <realhezean@gmail.com>
Signed-off-by: hezean <realhezean@gmail.com>
Co-authored-by: HeZean <realhezean@gmail.com>
Co-authored-by: Matthew <2575976183@qq.com>