@@ -67,6 +67,19 @@
             <artifactId>shiro-ehcache</artifactId>
             <version>1.9.1</version>
         </dependency>
+
+        <!--SMS-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>2.0.23</version>
+        </dependency>
+
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -82,6 +95,9 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.7.4</version>
                 <configuration>
+                    <jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED</jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
